# jpod-service

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  compression.txt  conanfile.txt  extraction.txt  jpod.kdev4  links.txt  networking.txt  oci.txt  route.txt  shasum.txt  user-group.txt
.kdev4/: jpod.kdev4
cmake/: FindSQLite3.cmake  conan.cmake  utilities.cmake
include/: bootstrap.h  definitions.h  result.h
include/containers/: container.h  container_builder.h  container_controller.h  container_handler.h  container_listener.h  container_repository.h  container_runtime.h  container_service.h  data_types.h  details.h  sql_container_repository.h
include/core/archives/: errors.h  helper.h
include/core/bus/: event_bus.h  function_traits.h
include/core/commands/: command_handler.h  command_handler_registry.h  internal_contracts.h
include/core/configuration/: configuration.h
include/images/: copy_instruction.h  data_types.h  errors.h  from_instruction.h  image_builder.h  image_controller.h  image_repository.h  image_service.h  instruction.h  instruction_listener.h  instruction_runner.h  run_instruction.h  sql_image_repository.h  stage.h  work_dir_instruction.h
include/jails/: configurations.h  jail_handler.h  jail_repository.h  models.h  sql_jail_repository.h
include/ops/: application.h  events.h  session.h
include/shell/: details.h  events.h  payloads.h  session.h  terminal.h  terminal_listener.h
include/storage/: connection.h  connection_proxy.h  data_source.h  migrations.h  resultset.h  statement.h  transaction.h
include/utilities/: commander.h
include/zfs/: pool.h  pool_vdev.h  types.h  zfs.h  zfs_utilities.h
migrations/: V1__init_tables.sql  V2__image_table.sql
protos/: protocols.proto
resources/configurations/: freebsd-template.yml  linux-template.yml  settings.yml
resources/migrations/: initial-tables.sql  local-registry.sql  network-tables.sql  volume-table.sql
samples/: mysql.json  nats-alpine.json  postgres-latest.json  rabbitmq-0.json  vernemq.json
src/: CMakeLists.txt  bootstrap.cc  details.txt  main.cc
src/containers/: container.cc  container_builder.cc  container_controller.cc  container_handler.cc  container_runtime.cc  container_service.cc  shell_operator.cc  sql_container_repository.cc
src/core/archives/: helper.cc
src/core/commands/: command_handler.cc  command_handler_registry.cc
src/core/connections/: connection.cc  connection_acceptor.cc
src/core/connections/ipc/: domain_connection.cc  domain_connection_acceptor.cc
src/core/connections/ws/: crypto.cc  ws_connection.cc  ws_connection_acceptor.cc
src/core/containers/: manager.cc
src/core/databases/: connection.cc  data_source.cc  migrations.cc  result_set.cc  statement.cc  transaction.cc
src/core/filesystems/: zfs_handler.cc
src/core/http/: async_client.cc  file_transfer_client.cc  insecure_session.cc  rest_client.cc  secure_session.cc
src/core/networking/addresses/: manager.cc
src/core/networking/pf/: rule_set.cc  transaction.cc
src/core/networking/routing/: rule_set.cc  transaction.cc
src/core/networks/addresses/: provider.cc  sql_repository.cc
src/core/networks/http/: asio_client.cc  connection.cc  file_destination.cc  request.cc  request_builder.cc
src/core/networks/interfaces/: virtual_network_handler.cc
src/core/networks/pf/: query.cc  rule_set.cc  transaction.cc
src/core/oci/: layer_download_task.cc  oci_client.cc
src/core/shell/: service.cc  session.cc  terminal.cc
src/core/sql/: connection.cc  data_source.cc  migrations.cc  result_set.cc  statement.cc  transaction.cc
src/domain/containers/: creation_handler.cc  freebsd_container.cc  in_memory_monitor.cc  list_handler.cc  logging_handler.cc  removal_handler.cc  runtime.cc  shell_handler.cc  sql_repository.cc  start_handler.cc  stop_handler.cc
src/domain/containers/freebsd/: freebsd_container.cc  freebsd_terminal.cc  freebsd_vnet_provider.cc
src/domain/images/: build_handler.cc  import_handler.cc  list_handler.cc  pull_handler.cc  removal_handler.cc  sql_repository.cc
src/domain/images/http/: asio_client.cc  connection_base.cc  insecure_connection.cc  request.cc  request_builder.cc  secure_connection.cc
src/domain/images/instructions/: build_system_resolver.cc  cleanup_instruction.cc  compression_instruction.cc  copy_instruction.cc  download_instruction.cc  extraction_instruction.cc  import_instruction.cc  mount_instruction.cc  registration_instruction.cc  run_instruction.cc  unmount_instruction.cc  work_dir_instruction.cc
src/domain/networking/: address_provider.cc  asio_address_provider.cc  create_handler.cc  list_handler.cc  network_service.cc  remove_handler.cc  sql_repository.cc  virtual_network_provider.cc
src/domain/networking/freebsd/: freebsd_network_handler.cc
src/images/: copy_instruction.cc  from_instruction.cc  image_controller.cc  image_service.cc  instruction_runner.cc  run_instruction.cc  sql_image_repository.cc  stage.cc  work_dir_instruction.cc
src/jails/: jail_handler.cc  sql_jail_repository.cc
src/ops/: application.cc  session.cc
src/shell/: session.cc  terminal.cc
src/storage/: connection.cc  data_source.cc  migrations.cc  resultset.cc  statement.cc  transaction.cc
src/utilities/subprocess/: pipe.cc  process_builder.cc  process_builder_posix.cc  process_builder_windows.cc  shell_utils.cc  utf8_to_utf16.cc
src/zfs/: pool.cc  zfs.cc  zfs_utilities.cc
tests/: CMakeLists.txt  catch_main.cc  smp-test.txt  smp.txt  test_address_manager.cc  test_container_manager.cc  test_main.cc
tests/containers/: CMakeLists.txt  helpers.h  test_container_store.cc
tests/images/: CMakeLists.txt  embedded_fs.h  helpers.h  test_cleanup_instruction.cc  test_compression_instruction.cc  test_copy_instruction.cc  test_download_instruction.cc  test_extraction_instruction.cc  test_image_store.cc  test_import_instruction.cc  test_mount_instruction.cc  test_registration_instruction.cc  test_unmount_instruction.cc  test_work_dir_instruction.cc  utilities.h
tests/networking/: CMakeLists.txt  test_address_provider.cc
(+196 files in other folders)
